<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_presets">

    <fragment
        android:id="@+id/nav_presets"
        android:name="com.example.pixellights.ui.preset.PresetFragment"
        android:label="@string/preset_lighting"
        tools:layout="@layout/fragment_preset">
    </fragment>


    <fragment
        android:id="@+id/nav_manual"
        android:name="com.example.pixellights.ui.manual.ManualFragment"
        android:label="@string/manual_lighting"
        tools:layout="@layout/fragment_manual" />

    <fragment
        android:id="@+id/nav_bluetooth"
        android:name="com.example.pixellights.ui.bluetooth.BluetoothFragment"
        android:label="@string/bluetooth_config"
        tools:layout="@layout/fragment_bluetooth" />
</navigation>