<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black_mesh"
    tools:context=".ui.preset.PresetFragment">

    <Button
        android:id="@+id/idle"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:background="@drawable/bubbles"
        android:textColor="@color/button_text_color"
        android:padding="4dip"
        android:text="@string/idle"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/rwr_subtle"
        app:layout_constraintEnd_toStartOf="@+id/warning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/warning"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:background="@drawable/yellow_gradient"
        android:textColor="@color/button_text_color"
        android:padding="4dip"
        android:text="@string/warning"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/rwb_paris_usa"
        app:layout_constraintEnd_toStartOf="@+id/exit"
        app:layout_constraintStart_toEndOf="@id/idle"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:background="@drawable/red_gradient"
        android:textColor="@color/button_text_color"
        android:text="@string/exit"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/blue_smooth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/warning"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rwr_subtle"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:background="@drawable/rwr_gradient"
        android:textColor="@color/button_text_color"
        android:text="@string/rwr_nsubtle"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/rwr_candy"
        app:layout_constraintEnd_toStartOf="@id/rwb_paris_usa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idle" />

    <Button
        android:id="@+id/rwb_paris_usa"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:background="@drawable/rwb_gradient"
        android:textColor="@color/button_text_color"
        android:text="@string/rwb_nparis_usa"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/rwg_candy"
        app:layout_constraintEnd_toStartOf="@id/blue_smooth"
        app:layout_constraintStart_toEndOf="@id/rwr_subtle"
        app:layout_constraintTop_toBottomOf="@id/warning" />

    <Button
        android:id="@+id/blue_smooth"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:background="@drawable/blue_gradient"
        android:textColor="@color/button_text_color"
        android:text="@string/blue_nsmooth"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/rwg_tree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rwb_paris_usa"
        app:layout_constraintTop_toBottomOf="@id/exit" />

    <Button
        android:id="@+id/rwr_candy"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:background="@drawable/rwr_gradient"
        android:textColor="@color/button_text_color"
        android:text="@string/rwr_ncandy"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/rwg_march"
        app:layout_constraintEnd_toStartOf="@id/rwg_candy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rwr_subtle" />

    <Button
        android:id="@+id/rwg_candy"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:background="@drawable/rwg_gradient"
        android:textColor="@color/button_text_color"
        android:text="@string/rwg_ncandy"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/rwg_wipe"
        app:layout_constraintEnd_toStartOf="@id/rwg_tree"
        app:layout_constraintStart_toEndOf="@id/rwr_candy"
        app:layout_constraintTop_toBottomOf="@id/rwb_paris_usa" />

    <Button
        android:id="@+id/rwg_tree"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:background="@drawable/rwg_gradient"
        android:textColor="@color/button_text_color"
        android:text="@string/rwg_ntree"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/rwg_flicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rwg_candy"
        app:layout_constraintTop_toBottomOf="@id/blue_smooth" />

    <Button
        android:id="@+id/rwg_march"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:background="@drawable/rwg_gradient"
        android:textColor="@color/button_text_color"
        android:text="@string/rwg_nmarch"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/cga"
        app:layout_constraintEnd_toStartOf="@id/rwg_wipe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rwr_candy" />

    <Button
        android:id="@+id/rwg_wipe"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:background="@drawable/rwg_gradient"
        android:textColor="@color/button_text_color"
        android:text="@string/rwg_nwipe"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/rainbow"
        app:layout_constraintEnd_toStartOf="@id/rwg_flicker"
        app:layout_constraintStart_toEndOf="@id/rwg_march"
        app:layout_constraintTop_toBottomOf="@id/rwg_candy" />

    <Button
        android:id="@+id/rwg_flicker"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:background="@drawable/rwg_gradient"
        android:textColor="@color/button_text_color"
        android:padding="4dip"
        android:text="@string/rwg_nflicker"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/strobe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rwg_wipe"
        app:layout_constraintTop_toBottomOf="@id/rwg_tree" />


    <Button
        android:id="@+id/cga"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:background="@drawable/cga_gradient"
        android:textColor="@color/button_text_color"
        android:padding="4dip"
        android:text="@string/cga"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rainbow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rwg_march" />

    <Button
        android:id="@+id/rainbow"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:background="@drawable/rainbow_gradient"
        android:textColor="@color/button_text_color"
        android:padding="4dip"
        android:text="@string/rainbow"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/strobe"
        app:layout_constraintStart_toEndOf="@id/cga"
        app:layout_constraintTop_toBottomOf="@id/rwg_wipe" />

    <Button
        android:id="@+id/strobe"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:background="@drawable/strobe_gradient"
        android:textColor="@color/button_text_color"
        android:padding="4dip"
        android:text="@string/strobe"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rainbow"
        app:layout_constraintTop_toBottomOf="@id/rwg_flicker" />

</androidx.constraintlayout.widget.ConstraintLayout>